fix: overflow problem with header

--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,7 @@ article {
 }
 
 body {
+	  outline: 1px solid red;
     background-color: #333333;
     color: #00FFCC;
     display: grid;
@@ -28,10 +29,10 @@ header {
 	background-color: #333333;
 	color: white;
 	grid-area: header;
-	padding: 1rem;
+	padding: 0;
 	position: fixed;
 	width: 100%;
-	margin: 0 -1rem;
+	margin: 0;
 }
 
 header,
